--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -55,17 +55,17 @@
     </tr>
     <tr>
       <td class="leftTop"><strong>Teams:</strong></td>
-      <td class="centerTop"><p class="justifyAlign">HRIS, DevOps</td>
+      <td class="centerTop">HRIS, DevOps</td>
     </tr>
     <tr>
       <td class="leftTop"><strong>Summary:</strong></td>
       <td class="centerTop"><p class="justifyAlign"> Experienced Senior DevOps Engineer proficient in architecting and optimizing application deployment across diverse runtime environments. Expertise in utilizing Continuous Integration methodologies and tools to facilitate seamless continuous delivery solutions across multiple geographical locations. Skilled in orchestrating Kubernetes-based image deployments within the Azure portal to enhance efficiency and scalability.
-    </td>
+      </td>
     </tr>
     <br/>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="leftAlign">
+      <!-- <p class="leftAlign"> -->
         <ul style="list-style-type: '-  '; text-align: left"> 
           <li>Design and construct infrastructure and comprehensive CI/CD pipelines using image based methodology and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
           <li>Create and identify unique CLI tooling for the monitoring existing applications throughout environments using GoLang.</li>
@@ -78,7 +78,7 @@
           <li>Mentor software developers to attain operations skills and assume responsibilities within the domain.</li>
           <li>Monitor and maintain existing infrastructure in multiple production level environments.</li>
         </ul>
-      </p>  
+      <!-- </p>   -->
     </td>
     </tbody>
 </table>
