--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -65,20 +65,18 @@
     <br/>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <!-- <p class="leftAlign"> -->
-        <ul style="list-style-type: '-  '; text-align: left"> 
-          <li>Design and construct infrastructure and comprehensive CI/CD pipelines using image based methodology and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
-          <li>Create and identify unique CLI tooling for the monitoring existing applications throughout environments using GoLang.</li>
-          <li>Contribute to informed decision-making processes by providing expert guidance on information system options, risk assessment, and operational impact.</li>
-          <li>Execute releases and script updates, while also exploring and implementing new third-party products to enhance system capabilities.</li>
-          <li>Oversee the installation and configuration of solutions, ensuring optimal performance and reliability.</li>
-          <li>Collaborate closely with developers to refine software requirements and effectively interpret test stage data, fostering a collaborative and agile development environment.</li>
-          <li>Demonstrate a commitment to documentation excellence by thoroughly documenting processes and monitoring performance metrics, enabling clear communication and knowledge sharing across teams.</li>
-          <li>Adhere to industry best practices in network administration and cybersecurity, upholding stringent standards to maintain system integrity and protect sensitive data.</li>
-          <li>Mentor software developers to attain operations skills and assume responsibilities within the domain.</li>
-          <li>Monitor and maintain existing infrastructure in multiple production level environments.</li>
-        </ul>
-      <!-- </p>   -->
+      <ul style="list-style-type: '-  '; text-align: left"> 
+        <li>Design and construct infrastructure and comprehensive CI/CD pipelines using image based methodology and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
+        <li>Create and identify unique CLI tooling for the monitoring existing applications throughout environments using GoLang.</li>
+        <li>Contribute to informed decision-making processes by providing expert guidance on information system options, risk assessment, and operational impact.</li>
+        <li>Execute releases and script updates, while also exploring and implementing new third-party products to enhance system capabilities.</li>
+        <li>Oversee the installation and configuration of solutions, ensuring optimal performance and reliability.</li>
+        <li>Collaborate closely with developers to refine software requirements and effectively interpret test stage data, fostering a collaborative and agile development environment.</li>
+        <li>Demonstrate a commitment to documentation excellence by thoroughly documenting processes and monitoring performance metrics, enabling clear communication and knowledge sharing across teams.</li>
+        <li>Adhere to industry best practices in network administration and cybersecurity, upholding stringent standards to maintain system integrity and protect sensitive data.</li>
+        <li>Mentor software developers to attain operations skills and assume responsibilities within the domain.</li>
+        <li>Monitor and maintain existing infrastructure in multiple production level environments.</li>
+      </ul>
     </td>
     </tbody>
 </table>
@@ -94,7 +92,7 @@
     <tbody>
     <tr>
     <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>SOFTWARE DEVELOPER II (DEVOPS)</strong></td>
+    <td style="text-align:left"><strong>DEVOPS ENGINEER II</strong></td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Teams:</strong></td>
@@ -107,16 +105,14 @@
     <br/>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="leftAlign"> 
-        <ul style="list-style-type: '-  '; text-align: left">
-          <li>Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.</li>
-          <li>Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.</li>
-          <li>Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.</li>
-          <li>Implemented monitoring solutions for both service and infrastructure as well as adding improvements to our internal tooling for improved software performance and delivery.</li>
-          <li>Worked with teams of product managers, developers and architects to document and understand existing functionality of an on-premise software solution for future Cloud transfer.</li>
-          <li>Front-End engineer tasked with creating Angular UI integration with .NET APIs for transfer of on-premise software solution to the Cloud</li>
-        </ul>
-      </p>
+      <ul style="list-style-type: '-  '; text-align: left">
+        <li>Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.</li>
+        <li>Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.</li>
+        <li>Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.</li>
+        <li>Implemented monitoring solutions for both service and infrastructure as well as adding improvements to our internal tooling for improved software performance and delivery.</li>
+        <li>Worked with teams of product managers, developers and architects to document and understand existing functionality of an on-premise software solution for future Cloud transfer.</li>
+        <li>Front-End engineer tasked with creating Angular UI integration with .NET APIs for transfer of on-premise software solution to the Cloud</li>
+      </ul>
     </tbody>
 </table>
 <br>
@@ -142,7 +138,7 @@
     <td class="centerTop"><p class="justifyAlign"> Software Engineer tasked with development, refactoring, improving architecture and maintenance of multi-tenant software platform for e-commerce sales through the use of Microsoft Stack technology and tools integrated with API based SaaS software. </p></td>
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-    <td><p class="leftAlign"> 
+    <td>
       <ul style="list-style-type: '-  '; text-align: left">
         <li>Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#, Microsoft.Net, Visual Studio, SSMS, HTML5, Javascript, CSS, T-SQL, and GIT.</li>
         <li>Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.</li>
@@ -154,7 +150,7 @@
         <li>Create resolutions, develop integrated project plans and identify governance vulnerabilities within organization the organization, asses impact and present solutions to groups of 5-10 developers and stakeholders.</li>
         <li>Assess new technologies and potential influence on current requirements and business rule implementations.</li>
         <li>Monitor defects of current architecture through implementation and use of Error Logging Modules and Handlers (ELMAH) technology along with New Relic performance software.</li>
-        <li>Reverse engineer current features for use with updated technologies converting and expanding Visual Basic code to .Net 4.5 framework using C#, Webforms and T-SQL.Architect and support scalable in-house ECOM solutions integrated with Authorize.net and CyberSource API&#39;s to handle greater than 1200 orders per day with a revenue of over 18 million annually. </p></li>
+        <li>Reverse engineer current features for use with updated technologies converting and expanding Visual Basic code to .Net 4.5 framework using C#, Webforms and T-SQL.Architect and support scalable in-house ECOM solutions integrated with Authorize.net and CyberSource API&#39;s to handle greater than 1200 orders per day with a revenue of over 18 million annually.</li>
       </ul>
     </td>
     </tbody>
@@ -186,7 +182,6 @@
     <tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="leftAlign">
         <ul style="list-style-type: '-  '; text-align: left">
           <li>Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.</li>
           <li>Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.</li>
@@ -194,7 +189,6 @@
           <li>Maintain and implement features in an administration portal implemented using Visual Basic code focused at enabling non-technical employee code maintenance for real-time desk support.</li>
           <li>Communicate with customer service representatives for requirements gathering and creating business rules resulting in software feature implementations and maintenance using Microsoft Office 365 tools, Business Skype and GoTo Meeting for streamlined communication. </li>
         </ul>
-      </p>
     </td>
     </tbody>
 </table>
@@ -223,16 +217,14 @@
     <td><p class="justifyAlign"> Lead test and development engineer in NIH funded, multimillion-dollar research project aimed at solving bone fixation in healthy and osteoporotic patients. </p></td>
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-      <p class="leftAlign">
-        <ul style="list-style-type: '-  '; text-align: left">
-          <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
-          <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
-          <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
-          <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
-          <li>Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0.</li>
-          <li>Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </li>
-        </ul> 
-      </p>
+      <ul style="list-style-type: '-  '; text-align: left">
+        <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
+        <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
+        <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
+        <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
+        <li>Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0.</li>
+        <li>Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </li>
+      </ul> 
     </tbody>
 </table>
 <br>
@@ -261,14 +253,12 @@
     </tr>
     <tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-    <td>
-      <p class="leftAlign"> 
+      <td>
         <ul style="list-style-type: '-  '; text-align: left">
           <li>In charge of determining proper testing techniques for destruction testing of specimen using MTS software.</li>
           <li>Created and documented test protocols for future process automation, results collection and automation.</li>
         </ul>
-      </p>
-    </td>
+      </td>
     </tr>
     </tbody>
 </table>
