--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -117,25 +117,25 @@
 </table>
 <br>
 <table >
-    <thead>
+  <thead>
+  <tr>
+  <th style="text-align:left"><strong>04.2014 – 04.2018</strong></th>
+  <th></th><strong>ONFULFILLMENT™</strong></th>
+  <th style="text-align:right">Portland, OR</th>
+  </tr>
+  </thead>
+  <tbody>
     <tr>
-    <th style="text-align:left"><strong>04.2014 – 04.2018</strong></th>
-    <th></th><strong>ONFULFILLMENT™</strong></th>
-    <th style="text-align:right">Portland, OR</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-    <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>SOFTWARE DEVELOPER I</strong></td>
-    </tr>
-    <tr>
-    <td class="leftTop"><strong>Teams:</strong></td>
-    <td class="centerTop"><p class="justifyAlign">Action - Janice Kiser, Manager; Building – Allen Newton, Senior Development Engineer  </p></td>
+      <td class="leftTop"><strong>Title:</strong></td>
+      <td style="text-align:left"><strong>SOFTWARE DEVELOPER I</strong></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Summary:</strong></td>
-    <td class="centerTop"><p class="justifyAlign"> Software Engineer tasked with development, refactoring, improving architecture and maintenance of multi-tenant software platform for e-commerce sales through the use of Microsoft Stack technology and tools integrated with API based SaaS software. </p></td>
+      <td class="leftTop"><strong>Teams:</strong></td>
+      <td class="centerTop"><p class="justifyAlign">Action - Janice Kiser, Manager; Building – Allen Newton, Senior Development Engineer </td>
+    </tr>
+    <tr>
+      <td class="leftTop"><strong>Summary:</strong></td>
+      <td class="centerTop"><p class="justifyAlign"> Software Engineer tasked with development, refactoring, improving architecture and maintenance of multi-tenant software platform for e-commerce sales through the use of Microsoft Stack technology and tools integrated with API based SaaS software. </p></td>
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
@@ -153,44 +153,44 @@
         <li>Reverse engineer current features for use with updated technologies converting and expanding Visual Basic code to .Net 4.5 framework using C#, Webforms and T-SQL.Architect and support scalable in-house ECOM solutions integrated with Authorize.net and CyberSource API&#39;s to handle greater than 1200 orders per day with a revenue of over 18 million annually.</li>
       </ul>
     </td>
-    </tbody>
+  </tbody>
 </table>
 <br>
 <table>
-    <tbody>
+  <tbody>
     <tr>
-    <td style="text-align:left"><strong>04.2013 – 03.2014</strong></td>
-    <td class="centerTop"><strong>PACIFICAPPS</strong></td>
-    <td style="text-align:right">Portland, OR</td>
+      <td style="text-align:left"><strong>04.2013 – 03.2014</strong></td>
+      <td class="centerTop"><strong>PACIFICAPPS</strong></td>
+      <td style="text-align:right">Portland, OR</td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>JUNIOR DEVELOPER</strong></td>
+      <td class="leftTop"><strong>Title:</strong></td>
+      <td style="text-align:left"><strong>JUNIOR DEVELOPER</strong></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Teams:</strong></td>
-    <td class="centerTop"><p class="justifyAlign">Action – John Kiser, Chief Technology Officer </p></td>
+      <td class="leftTop"><strong>Teams:</strong></td>
+      <td class="centerTop"><p class="justifyAlign">Action – John Kiser, Chief Technology Officer </p></td>
     </tr>
     <tr>
-    <td style="text-align:left"></td>
-    <td style="text-align:center"></td>
+      <td style="text-align:left"></td>
+      <td style="text-align:center"></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Summary:</strong></td>
-    <td class="centerTop"><p class="justifyAlign">Software Developer tasked with learning and improving existing multi-tenancy platform for e-commerce sales of products to tech companies based in the bay area using Microsoft Stack technology. </td>
+      <td class="leftTop"><strong>Summary:</strong></td>
+      <td class="centerTop"><p class="justifyAlign">Software Developer tasked with learning and improving existing multi-tenancy platform for e-commerce sales of products to tech companies based in the bay area using Microsoft Stack technology. </td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Responsibilities:</strong></td>
+      <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-        <ul style="list-style-type: '-  '; text-align: left">
-          <li>Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.</li>
-          <li>Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.</li>
-          <li>Integrate and support conversion functionality throughout customized software and integrating with Authorize.Net API.</li>
-          <li>Maintain and implement features in an administration portal implemented using Visual Basic code focused at enabling non-technical employee code maintenance for real-time desk support.</li>
-          <li>Communicate with customer service representatives for requirements gathering and creating business rules resulting in software feature implementations and maintenance using Microsoft Office 365 tools, Business Skype and GoTo Meeting for streamlined communication. </li>
-        </ul>
+      <ul style="list-style-type: '-  '; text-align: left">
+        <li>Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.</li>
+        <li>Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.</li>
+        <li>Integrate and support conversion functionality throughout customized software and integrating with Authorize.Net API.</li>
+        <li>Maintain and implement features in an administration portal implemented using Visual Basic code focused at enabling non-technical employee code maintenance for real-time desk support.</li>
+        <li>Communicate with customer service representatives for requirements gathering and creating business rules resulting in software feature implementations and maintenance using Microsoft Office 365 tools, Business Skype and GoTo Meeting for streamlined communication. </li>
+      </ul>
     </td>
-    </tbody>
+  </tbody>
 </table>
 <br>
 <table>
