--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -218,7 +218,7 @@
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
       <ul style="list-style-type: '-  '; text-align: left">
-        <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
+        <li>ABCDEFManage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
         <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
         <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
         <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
