--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -218,7 +218,7 @@
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
       <ul style="list-style-type: '-  '; text-align: left">
-        <li>ABCDEFManage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
+        <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
         <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
         <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
         <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
@@ -267,34 +267,33 @@
 <table>
     <tbody>
     <tr>
-    <td style="text-align:left"><strong>09.2006 – 11.2007</strong></td>
-    <td class="centerTop"><strong>GOOGLE</strong></td>
-    <td style="text-align:right">Mountain View, CA</td>
+      <td style="text-align:left"><strong>09.2006 – 11.2007</strong></td>
+      <td class="centerTop"><strong>GOOGLE</strong></td>
+      <td style="text-align:right">Mountain View, CA</td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>QUALITY ASSURANCE ASSOCIATE</strong></td>
+      <td class="leftTop"><strong>Title:</strong></td>
+      <td style="text-align:left"><strong>QUALITY ASSURANCE ASSOCIATE</strong></td>
     </tr>
-    <td class="leftTop"><strong>Team:</strong></td>
-    <td><p class="justifyAlign">Quality Assurance – no direct supervisor </p></td>
-    </tr>
-    <tr>
-    <td style="text-align:left"></td>
-    <td style="text-align:center"></td>
+      <td class="leftTop"><strong>Team:</strong></td>
+      <td><p class="justifyAlign">Quality Assurance – no direct supervisor </p></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Summary:</strong></td>
-    <td><p class="justifyAlign"> Evaluated the accuracy of Google search engine results and web layout effectiveness for web advertising. </p></td>
+      <td style="text-align:left"></td>
+      <td style="text-align:center"></td>
     </tr>
     <tr>
+      <td class="leftTop"><strong>Summary:</strong></td>
+      <td>
+          <p class="justifyAlign"> Evaluated the accuracy of Google search engine results and web layout effectiveness for web advertising. </p>
+      </td>
+    </tr>
     <td class="leftTop"><strong> Responsibilities:</strong></td>
     <td>
-      <p class="leftAlign"> 
-        <ul style="list-style-type: '-  '; text-align: left">
-          <li>Evaulate search algorithm accuracy of ambiguious search queriesGained unique and valuable experience with the UI side of quality assurance.</li>
-          <li>Communicated remotely through email with interdisciplinary web developers. </li>
-        </ul>
-      </p>
+      <ul style="list-style-type: '-  '; text-align: left">
+        <li>Evaulate search algorithm accuracy of ambiguious search queriesGained unique and valuable experience with the UI side of quality assurance.</li>
+        <li>Communicated remotely through email with interdisciplinary web developers. </li>
+      </ul>
     </td>
     </tbody>
 </table>
@@ -302,33 +301,31 @@
 <table>
     <tbody>
     <tr>
-    <td style="text-align:left"><strong>09.2006 – 12.2006</strong></td>
-    <td class="centerTop"><strong>UNIVERSITY OF PORTLAND</strong></td>
-    <td style="text-align:right">Portland, Oregon</td>
+      <td style="text-align:left"><strong>09.2006 – 12.2006</strong></td>
+      <td class="centerTop"><strong>UNIVERSITY OF PORTLAND</strong></td>
+      <td style="text-align:right">Portland, Oregon</td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>PROFESSOR BIOMECHANICS</strong></td>
+      <td class="leftTop"><strong>Title:</strong></td>
+      <td style="text-align:left"><strong>PROFESSOR BIOMECHANICS</strong></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Team:</strong></td>
-    <td><p class="justifyAlign">Mechanical Engineering Department</td>
+      <td class="leftTop"><strong>Team:</strong></td>
+      <td><p class="justifyAlign">Mechanical Engineering Department</p></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Summary:</strong></td>
-    <td><p class="justifyAlign"> Created and delivered biweekly lectures about design principles and guidelines for orthopaedic implant development to twenty-five upper level mechanical engineering students.</td>
+      <td class="leftTop"><strong>Summary:</strong></td>
+      <td><p class="justifyAlign"> Created and delivered biweekly lectures about design principles and guidelines for orthopaedic implant development to twenty-five upper level mechanical engineering students.</p></td>
     </tr>
     <tr>
-    <td class="leftTop"><strong> Responsibilities:</strong></td>
-    <td>
-      <p class="leftAlign">
+      <td class="leftTop"><strong> Responsibilities:</strong></td>
+      <td>
         <ul style="list-style-type: '-  '; text-align: left">
           <li>In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.</li>
           <li>Lecture creation and delivery.</li>
           <li>Solely responsible for grading, lab creation and content delivery.</li>
         </ul>
-      </p>
-    </td>
+      </td>
     </tr>
     </tbody>
 </table>
