--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -359,8 +359,8 @@
 <h3 id="-education-"><strong>EDUCATION</strong></h3>
 <table style="width:100%">
     <tr>
-      <td style="text-align:left;"><strong>Post-Graduate:</strong> Master&#39;s, 2006<br/> University of California, Davis<br/> Biomechanics</td>
-      <td style="text-align:right; vertical-align:top"><strong>Undergraduate:</strong> Bachelors of Science, 2003 <br/>California State University, Chico<br/> Mechanical Engineering</td>
+      <td style="text-align:left;"><strong>Post-Graduate:</strong> Master of Science, 2006<br/> University of California, Davis<br/> Biomechanics</td>
+      <td style="text-align:right; vertical-align:top"><strong>Undergraduate:</strong> Bachelor of Science, 2003 <br/>California State University, Chico<br/> Mechanical Engineering</td>
     </tr>
 <tbody>
 <tr>
