Add Updated resume and CKS certification and updated photos

--- a/Certifications/Certifications.html
+++ b/Certifications/Certifications.html
@@ -1,10 +1,14 @@
-<p style="text-align: center"> <b> MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE </b>
-    <br> <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a> 
-    <br> <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> <img src="/img/certificates/josef-doornink-azure-certificate.jpg" alt="AzureDeveloperAssociate" width="500" height="350"> </a></p>
+<p style="text-align: center"> <b> CERTIFIED KUBERNETES SECURITY SPECIALIST </b> 
+    <br> <a href="/img/certificates/josef-doornink-cks-certificate.pdf"> LF-GHGUGL1A0S) </a>
+    <br> <a href="/img/certificates/josef-doornink-cks-certificate.pdf"><img src="/img/certificates/josef-doornink-cks-certificate.jpg" alt="CKS" width="500" height="375"></a> </p>
     <br>
 <p style="text-align: center"> <b> CERTIFIED KUBERNETES ADMINISTRATOR </b> 
     <br> <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a>
     <br> <a href="/img/certificates/josef-doornink-cka-certificate.pdf"><img src="/img/certificates/josef-doornink-cka-certificate.jpg" alt="CKA" width="500" height="375"></a> </p>
+    <br>
+<p style="text-align: center"> <b> MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE </b>
+    <br> <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a> 
+    <br> <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> <img src="/img/certificates/josef-doornink-azure-certificate.jpg" alt="AzureDeveloperAssociate" width="500" height="350"> </a></p>
     <br>
 <p style="text-align: center"> <b> TERRAFORM ASSSOCIATE </b> 
     <br> <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"> LF-W50BPV1LPD </a>
