--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume6_1-page.pdf">RESUME 1-Page (PDF)</a>
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume6-Full.pdf">RESUME-FULL</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume7-Full.pdf">RESUME-FULL</a>
             </li>
           </ul>
         </div>
@@ -69,9 +69,10 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/Bridge-Small-Brighter.jpg" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" width="400" height="500"src="img/Trees-frontal-bright.jpg" alt="">
         <h1 class="text-uppercase mb-0">Josef Doornink</h1>
         <br>
+        <img class="img-thumbnail-badge" src="img/certificates/badge/CKS.png" alt="Skills">
         <img class="img-thumbnail-badge" src="img/certificates/badge/CKA.png" alt="Skills">
         <img class="img-thumbnail-badge" src="img/certificates/badge/AzureDevAssociate.png" alt="Skills">
         <img class="img-thumbnail-badge" src="img/certificates/badge/Terraform.png" alt="Skills">
@@ -79,7 +80,7 @@
         <br>
         <ul style ="list-style-type: square; text-align: left;">
         <h2 class="font-weight-light mb-0" style="font-size:1.25rem">
-          <li>Enthusiastic DevOps engineer with over 8 years development experience with enterprise application software.</li>
+          <li>Enthusiastic DevOps engineer with over 10 years development experience with distributed-system enterprise application software.</li>
           <li>Knowledge, enthusiasm and experience to help teams develop, deploy and maintain successful solutions across multiple environments in a fast-paced setting.<br/>
           <li>Learn more about me by viewing my portfolio below and feel free to contact me through my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page.</li>
         </h2>
