update resume, implement stanford image

--- a/Certifications/Certifications.html
+++ b/Certifications/Certifications.html
@@ -17,3 +17,8 @@
 <p style="text-align: center"> <b> GOLANG UDEMY BOOTCAMP </b> 
     <br> <a href="/img/certificates/josef-doornink-golang-udemy-bootcamp.pdf"> LF-W50BPV1LPD </a>
     <br> <a href="/img/certificates/josef-doornink-golang-udemy-bootcamp.pdf"><img src="/img/certificates/josef-doornink-golang-udemy-bootcamp.jpg" alt="GOLangUdemyBootcamp" width="500" height="375"></a> </p>
+    <br>
+<p style="text-align: center"> <b> MACHINE LEARNING COURSE </b>
+    <br> <a href="https://coursera.org/verify/specialization/N9B65BV6N3UI"> N9B65BV6N3UI </a>
+    <br> <a href="/img/certificates/josef-doornink-machine-learning.pdf"><img src="/img/certificates/josef-doornink-machine-learning.pdf" alt="MachineLearning" width="500" height="375"></a> </p>
+    TODO
