--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume7_1-page.pdf">RESUME 1-Page (PDF)</a>
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume7-full.pdf">RESUME-FULL</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume8-full.pdf">RESUME-FULL</a>
             </li>
           </ul>
         </div>
@@ -76,12 +76,14 @@
         <img class="img-thumbnail-badge" src="img/certificates/badge/CKA.png" alt="Skills">
         <img class="img-thumbnail-badge" src="img/certificates/badge/AzureDevAssociate.png" alt="Skills">
         <img class="img-thumbnail-badge" src="img/certificates/badge/Terraform.png" alt="Skills">
+        <img class="img-thumbnail-badge" src="img/certificates/badge/MachineLearning-Stanford.png" alt="Skills">
         <br>
         <br>
         <ul style ="list-style-type: square; text-align: left;">
         <h2 class="font-weight-light mb-0" style="font-size:1.25rem">
-          <li>Enthusiastic DevOps engineer with over 10 years development experience with distributed-system enterprise application software.</li>
-          <li>Knowledge, enthusiasm and experience to help teams develop, deploy and maintain successful solutions across multiple environments in a fast-paced setting.<br/>
+          <li>Enthusiastic SRE with over 7 years experience architecting reliable distributed-system.</li>
+          <li>Knowledge, enthusiasm and experience transforming operational overhead into self-healing systems usign IAC and custom tooling.<br/>
+          <li>CKS, CKA certified engineer with a strong interest in learning and working with AI. <br/>
           <li>Learn more about me by viewing my portfolio below and feel free to contact me through my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page.</li>
         </h2>
       </div>
@@ -162,10 +164,6 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">Portland, OR USA</p>
-          </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Contact</h4>
             <ul class="list-inline mb-0">
