add resume full

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume7_1-page.pdf">RESUME 1-Page (PDF)</a>
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume8-full.pdf">RESUME-FULL</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume8-Full.pdf">RESUME-FULL</a>
             </li>
           </ul>
         </div>
